commit 8 Files modified - [mainpage,cmtaxprojects,profiles,app.properties]

--- a/services/cmtaxprojects/designtime/cmtaxprojects_published_dataModel.json
+++ b/services/cmtaxprojects/designtime/cmtaxprojects_published_dataModel.json
@@ -876,16 +876,16 @@
         "type" : "user-defined"
       },
       "constraintList" : [ ],
-      "fieldName" : "_1040",
+      "fieldName" : "f1040",
       "foreignKey" : false,
       "generatorType" : "assigned",
       "generatorValue" : null,
       "hidden" : false,
       "javaType" : "string",
       "length" : 20,
-      "name" : "1040",
+      "name" : "f1040",
       "nullable" : true,
-      "oldName" : "1040",
+      "oldName" : "f1040",
       "partOfAnyRelation" : false,
       "partOfForeignKey" : false,
       "partOfPrimaryKey" : false,
@@ -905,16 +905,16 @@
         "type" : "user-defined"
       },
       "constraintList" : [ ],
-      "fieldName" : "_3520",
+      "fieldName" : "f3520",
       "foreignKey" : false,
       "generatorType" : "assigned",
       "generatorValue" : null,
       "hidden" : false,
       "javaType" : "string",
       "length" : 20,
-      "name" : "3520",
+      "name" : "f3520",
       "nullable" : true,
-      "oldName" : "3520",
+      "oldName" : "f3520",
       "partOfAnyRelation" : false,
       "partOfForeignKey" : false,
       "partOfPrimaryKey" : false,
@@ -934,16 +934,16 @@
         "type" : "user-defined"
       },
       "constraintList" : [ ],
-      "fieldName" : "_3520a",
+      "fieldName" : "f3520a",
       "foreignKey" : false,
       "generatorType" : "assigned",
       "generatorValue" : null,
       "hidden" : false,
       "javaType" : "string",
       "length" : 20,
-      "name" : "3520a",
+      "name" : "f3520a",
       "nullable" : true,
-      "oldName" : "3520a",
+      "oldName" : "f3520a",
       "partOfAnyRelation" : false,
       "partOfForeignKey" : false,
       "partOfPrimaryKey" : false,
@@ -1079,16 +1079,16 @@
         "type" : "user-defined"
       },
       "constraintList" : [ ],
-      "fieldName" : "_1040exdate",
+      "fieldName" : "exdate1040",
       "foreignKey" : false,
       "generatorType" : "assigned",
       "generatorValue" : null,
       "hidden" : false,
       "javaType" : "date",
       "length" : 0,
-      "name" : "1040exdate",
+      "name" : "exdate1040",
       "nullable" : true,
-      "oldName" : "1040exdate",
+      "oldName" : "exdate1040",
       "partOfAnyRelation" : false,
       "partOfForeignKey" : false,
       "partOfPrimaryKey" : false,
@@ -1108,16 +1108,16 @@
         "type" : "user-defined"
       },
       "constraintList" : [ ],
-      "fieldName" : "_3520aexdate",
+      "fieldName" : "exdate3520a",
       "foreignKey" : false,
       "generatorType" : "assigned",
       "generatorValue" : null,
       "hidden" : false,
       "javaType" : "date",
       "length" : 0,
-      "name" : "3520aexdate",
+      "name" : "exdate3520a",
       "nullable" : true,
-      "oldName" : "3520aexdate",
+      "oldName" : "exdate3520a",
       "partOfAnyRelation" : false,
       "partOfForeignKey" : false,
       "partOfPrimaryKey" : false,
@@ -1137,16 +1137,16 @@
         "type" : "user-defined"
       },
       "constraintList" : [ ],
-      "fieldName" : "stateexdate",
+      "fieldName" : "exdatestate",
       "foreignKey" : false,
       "generatorType" : "assigned",
       "generatorValue" : null,
       "hidden" : false,
       "javaType" : "date",
       "length" : 0,
-      "name" : "stateexdate",
+      "name" : "exdatestate",
       "nullable" : true,
-      "oldName" : "stateexdate",
+      "oldName" : "exdatestate",
       "partOfAnyRelation" : false,
       "partOfForeignKey" : false,
       "partOfPrimaryKey" : false,
@@ -1340,16 +1340,16 @@
         "type" : "user-defined"
       },
       "constraintList" : [ ],
-      "fieldName" : "_3520aext",
+      "fieldName" : "ext3520a",
       "foreignKey" : false,
       "generatorType" : "assigned",
       "generatorValue" : null,
       "hidden" : false,
       "javaType" : "string",
       "length" : 10,
-      "name" : "3520aext",
+      "name" : "ext3520a",
       "nullable" : true,
-      "oldName" : "3520aext",
+      "oldName" : "ext3520a",
       "partOfAnyRelation" : false,
       "partOfForeignKey" : false,
       "partOfPrimaryKey" : false,
@@ -1369,16 +1369,16 @@
         "type" : "user-defined"
       },
       "constraintList" : [ ],
-      "fieldName" : "stateext",
+      "fieldName" : "extstate",
       "foreignKey" : false,
       "generatorType" : "assigned",
       "generatorValue" : null,
       "hidden" : false,
       "javaType" : "string",
       "length" : 10,
-      "name" : "stateext",
+      "name" : "extstate",
       "nullable" : true,
-      "oldName" : "stateext",
+      "oldName" : "extstate",
       "partOfAnyRelation" : false,
       "partOfForeignKey" : false,
       "partOfPrimaryKey" : false,
@@ -1398,16 +1398,16 @@
         "type" : "user-defined"
       },
       "constraintList" : [ ],
-      "fieldName" : "_1040ext",
+      "fieldName" : "ext1040",
       "foreignKey" : false,
       "generatorType" : "assigned",
       "generatorValue" : null,
       "hidden" : false,
       "javaType" : "string",
       "length" : 10,
-      "name" : "1040ext",
+      "name" : "ext1040",
       "nullable" : true,
-      "oldName" : "1040ext",
+      "oldName" : "ext1040",
       "partOfAnyRelation" : false,
       "partOfForeignKey" : false,
       "partOfPrimaryKey" : false,
@@ -1448,6 +1448,93 @@
       "sequenceSchema" : null,
       "sqlType" : "number",
       "unique" : false
+    }, {
+      "columnValue" : {
+        "insertable" : true,
+        "updatable" : true,
+        "defaultValue" : "",
+        "type" : "user-defined"
+      },
+      "constraintList" : [ ],
+      "fieldName" : "usforms",
+      "foreignKey" : false,
+      "generatorType" : "assigned",
+      "generatorValue" : null,
+      "hidden" : false,
+      "javaType" : "string",
+      "length" : 255,
+      "name" : "usforms",
+      "nullable" : true,
+      "oldName" : "usforms",
+      "partOfAnyRelation" : false,
+      "partOfForeignKey" : false,
+      "partOfPrimaryKey" : false,
+      "partOfUniqueKey" : false,
+      "period" : false,
+      "precision" : 0,
+      "primaryKey" : false,
+      "scale" : 0,
+      "sequenceSchema" : null,
+      "sqlType" : "string",
+      "unique" : false
+    }, {
+      "columnValue" : {
+        "insertable" : true,
+        "updatable" : true,
+        "defaultValue" : "",
+        "type" : "user-defined"
+      },
+      "constraintList" : [ ],
+      "fieldName" : "dummy",
+      "foreignKey" : false,
+      "generatorType" : "assigned",
+      "generatorValue" : null,
+      "hidden" : false,
+      "javaType" : "string",
+      "length" : 255,
+      "name" : "Dummy",
+      "nullable" : true,
+      "oldName" : "Dummy",
+      "partOfAnyRelation" : false,
+      "partOfForeignKey" : false,
+      "partOfPrimaryKey" : false,
+      "partOfUniqueKey" : false,
+      "period" : false,
+      "precision" : 0,
+      "primaryKey" : false,
+      "scale" : 0,
+      "sequenceSchema" : null,
+      "sqlType" : "string",
+      "unique" : false
+    }, {
+      "columnValue" : {
+        "insertable" : true,
+        "updatable" : true,
+        "defaultValue" : "",
+        "type" : "user-defined"
+      },
+      "constraintList" : [ ],
+      "fieldName" : "futureuse",
+      "foreignKey" : false,
+      "generatorType" : "assigned",
+      "generatorValue" : null,
+      "hidden" : false,
+      "javaType" : "string",
+      "length" : 255,
+      "name" : "futureuse",
+      "nullable" : true,
+      "oldName" : "futureuse",
+      "partOfAnyRelation" : false,
+      "partOfForeignKey" : false,
+      "partOfPrimaryKey" : false,
+      "partOfUniqueKey" : false,
+      "period" : false,
+      "precision" : 0,
+      "primaryKey" : false,
+      "scale" : 0,
+      "sequenceSchema" : null,
+      "sqlType" : "string",
+      "unique" : false
     } ],
     "constraints" : [ ],
     "entityName" : "Projects",
@@ -1468,70 +1555,6 @@
       "virtual" : false
     },
     "relations" : [ {
-      "cardinality" : "ManyToOne",
-      "cascadeEnabled" : false,
-      "cascadeOptions" : {
-        "cascadeRemove" : "NONE",
-        "cascadeReplace" : true
-      },
-      "columnsUniqueKey" : false,
-      "composite" : false,
-      "fetchOptions" : {
-        "fetch" : true,
-        "columnsFilter" : [ ]
-      },
-      "fieldName" : "usersByPreparerid",
-      "ignored" : false,
-      "mappings" : [ {
-        "sourceColumn" : "preparerid",
-        "targetColumn" : "ID"
-      } ],
-      "name" : "FK_users_TO_projects_ID_VZDUm",
-      "parentFetchOptions" : {
-        "fetch" : false,
-        "columnsFilter" : [ ]
-      },
-      "primary" : true,
-      "selfRelation" : false,
-      "sourceColumnsNotUniqueKey" : true,
-      "sourceTable" : "projects",
-      "targetColumnsUniqueKey" : false,
-      "targetTable" : "users",
-      "valid" : true,
-      "virtual" : false
-    }, {
-      "cardinality" : "ManyToOne",
-      "cascadeEnabled" : false,
-      "cascadeOptions" : {
-        "cascadeRemove" : "NONE",
-        "cascadeReplace" : true
-      },
-      "columnsUniqueKey" : false,
-      "composite" : false,
-      "fetchOptions" : {
-        "fetch" : true,
-        "columnsFilter" : [ ]
-      },
-      "fieldName" : "offices",
-      "ignored" : false,
-      "mappings" : [ {
-        "sourceColumn" : "officeid",
-        "targetColumn" : "ID"
-      } ],
-      "name" : "FK_offices_TO_projects_IJdZtj",
-      "parentFetchOptions" : {
-        "fetch" : false,
-        "columnsFilter" : [ ]
-      },
-      "primary" : true,
-      "selfRelation" : false,
-      "sourceColumnsNotUniqueKey" : true,
-      "sourceTable" : "projects",
-      "targetColumnsUniqueKey" : false,
-      "targetTable" : "offices",
-      "valid" : true,
-      "virtual" : false
-    }, {
       "cardinality" : "ManyToOne",
       "cascadeEnabled" : false,
       "cascadeOptions" : {
@@ -1691,6 +1714,70 @@
       "targetTable" : "workstatus",
       "valid" : true,
       "virtual" : false
+    }, {
+      "cardinality" : "ManyToOne",
+      "cascadeEnabled" : false,
+      "cascadeOptions" : {
+        "cascadeRemove" : "NONE",
+        "cascadeReplace" : true
+      },
+      "columnsUniqueKey" : false,
+      "composite" : false,
+      "fetchOptions" : {
+        "fetch" : true,
+        "columnsFilter" : [ ]
+      },
+      "fieldName" : "usersByPreparerid",
+      "ignored" : false,
+      "mappings" : [ {
+        "sourceColumn" : "preparerid",
+        "targetColumn" : "ID"
+      } ],
+      "name" : "FK_users_TO_projects_ID_VZDUm",
+      "parentFetchOptions" : {
+        "fetch" : false,
+        "columnsFilter" : [ ]
+      },
+      "primary" : true,
+      "selfRelation" : false,
+      "sourceColumnsNotUniqueKey" : true,
+      "sourceTable" : "projects",
+      "targetColumnsUniqueKey" : false,
+      "targetTable" : "users",
+      "valid" : true,
+      "virtual" : false
+    }, {
+      "cardinality" : "ManyToOne",
+      "cascadeEnabled" : false,
+      "cascadeOptions" : {
+        "cascadeRemove" : "NONE",
+        "cascadeReplace" : true
+      },
+      "columnsUniqueKey" : false,
+      "composite" : false,
+      "fetchOptions" : {
+        "fetch" : true,
+        "columnsFilter" : [ ]
+      },
+      "fieldName" : "offices",
+      "ignored" : false,
+      "mappings" : [ {
+        "sourceColumn" : "officeid",
+        "targetColumn" : "ID"
+      } ],
+      "name" : "FK_offices_TO_projects_IJdZtj",
+      "parentFetchOptions" : {
+        "fetch" : false,
+        "columnsFilter" : [ ]
+      },
+      "primary" : true,
+      "selfRelation" : false,
+      "sourceColumnsNotUniqueKey" : true,
+      "sourceTable" : "projects",
+      "targetColumnsUniqueKey" : false,
+      "targetTable" : "offices",
+      "valid" : true,
+      "virtual" : false
     } ],
     "schema" : null,
     "temporals" : [ ],
@@ -1846,45 +1933,16 @@
         "type" : "user-defined"
       },
       "constraintList" : [ ],
-      "fieldName" : "firstname",
+      "fieldName" : "empname",
       "foreignKey" : false,
       "generatorType" : "assigned",
       "generatorValue" : null,
       "hidden" : false,
       "javaType" : "string",
       "length" : 255,
-      "name" : "firstname",
+      "name" : "empname",
       "nullable" : true,
-      "oldName" : "firstname",
-      "partOfAnyRelation" : false,
-      "partOfForeignKey" : false,
-      "partOfPrimaryKey" : false,
-      "partOfUniqueKey" : false,
-      "period" : false,
-      "precision" : 0,
-      "primaryKey" : false,
-      "scale" : 0,
-      "sequenceSchema" : null,
-      "sqlType" : "string",
-      "unique" : false
-    }, {
-      "columnValue" : {
-        "insertable" : true,
-        "updatable" : true,
-        "defaultValue" : "",
-        "type" : "user-defined"
-      },
-      "constraintList" : [ ],
-      "fieldName" : "lastname",
-      "foreignKey" : false,
-      "generatorType" : "assigned",
-      "generatorValue" : null,
-      "hidden" : false,
-      "javaType" : "string",
-      "length" : 255,
-      "name" : "lastname",
-      "nullable" : true,
-      "oldName" : "lastname",
+      "oldName" : "empname",
       "partOfAnyRelation" : false,
       "partOfForeignKey" : false,
       "partOfPrimaryKey" : false,
