--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,7 +1,8 @@
-#Thu Feb 14 19:31:12 UTC 2019
+#Thu Feb 14 19:39:41 UTC 2019
 app.environment.authentication=${app.environment.authentication}
 app.environment.host=${app.environment.host}
 app.environment.password=${app.environment.password}
+app.environment.port=${app.environment.port}
 app.environment.smtpServerTTLSEnabled=${app.environment.smtpServerTTLSEnabled}
 app.environment.username=${app.environment.username}
 app.proxy.enabled=${app.proxy.enabled}
